--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,6 +8,7 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import 'select2/dist/css/select2';
+@import 'aos/dist/aos.css';
 
 // Your CSS partials
 @import "components/index";
