--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -13,6 +13,7 @@
 
 .navbar-home {
   background: transparent;
+  z-index: 2;
   transition: 0.5s background-color ease;
   font-size: 24px;
   font-weight: 600;
