--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -41,6 +41,7 @@ a {
 }
 .card-list {
     transition: transform .2s;
+    background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3));
     padding: 20px;
     a {
         text-decoration: none;
