--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,10 @@
     <nav>
       <div class="navbar-home d-flex justify-content-between align-items-center">
         <%= link_to "Home", lists_path %>
-        <%= link_to "New list", new_list_path %>
+        <div>
+          <%= link_to "New list", new_list_path %>
+          
+        </div>
       </div>
     </nav>
     <%= yield %>
