--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -7,7 +7,7 @@
 <div class="infos-card d-flex justify-content-center">
         <div class="cards-lists mt-5">
             <% @lists.each do |list| %>
-                <div class="card card-list card-shadow" style="width: 500px;">
+                <div data-aos="flip-up" class="card card-list card-shadow" style="width: 500px;">
                     <img src="<%= list.url_path%>" class="card-img-top" height="300px" style="background: linear-gradient(to left, rgba(0,0,0,0.8) -26.48%, rgba(0,0,0,0.8) 73.52%);">
                     <%= link_to "#{list.name}", list_path(list), class: "list-title" %>
                 </div>
