--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
     <nav>
       <div class="navbar-home d-flex justify-content-between align-items-center">
-        <%= link_to "Home", lists_path %>
+        <%= link_to "Home", root_path %>
         <div>
           <%= link_to "New list", new_list_path %>
           
