--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -9,6 +9,8 @@ a {
     background-image: url('https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80');
     height: 100vh;
     width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 .home-title {
     position: absolute;
@@ -41,7 +43,7 @@ a {
 }
 .card-list {
     transition: transform .2s;
-    background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3));
+    // background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3));
     padding: 20px;
     a {
         text-decoration: none;
@@ -50,4 +52,9 @@ a {
     &:hover {
         transform: scale(1.1);
     }
+}
+.avatar-list {
+    position: absolute;
+    margin-top: 5px;
+    margin-left: 5px;
 }
