--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -9,8 +9,9 @@
         <%= simple_form_for(@list) do |f| %>
             <%= f.label :name, "What's the name of it", class: "my-3" %>
             <%= f.text_field :name, class: "form-control" %>
-            <%= f.label :url_path, "What's the url path?", class: "my-3"%>
+            <%= f.label :url_path, "What's the url path?", class: "my-3" %>
             <%= f.text_field :url_path, class: "form-control" %>
+            <%= f.input :photo, as: :file %>
             <%= f.submit "Add list", class: "btn btn-primary mt-3" %>
         <% end %>
     </div>
